# django-fsm-wagtail

./: .gitignore  HISTORY.rst  LICENSE  README.rst  setup.cfg  setup.py
fsm_wagtail/: admin.py  apps.py  views.py
fsm_wagtail/static/fsm_wagtail/css/: fsm_wagtail_admin.css
fsm_wagtail/static/fsm_wagtail/js/: fsm_wagtail_admin.js
fsm_wagtail/templates/fsm_wagtail/: modeladmin_confirm_action.html
