[bumpversion]
current_version = 0.1.0

[bumpversion:file:fsm_wagtail/__init__.py]

[metadata]
name = django-fsm-wagtail
version = 0.1
description = A Django app to integrate django-fsm to wagtail admin.
long_description = file: README.rst
url = https://www.example.com/
author = Ahmed ElBahnihi
author_email = abahnihi@gmail.com
license = MIT License
classifiers = 
	Environment :: Web Environment
	Framework :: Django
	Framework :: Django :: 2.2
	Intended Audience :: Developers
	License :: OSI Approved :: MIT License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
